# Resume_Builder

./: .gitignore  CLEANUP_AND_TESTS_DIFF.md  CLEANUP_AND_TESTS_FINAL_DIFF.md  EDIT_ENGINE_FIXES.md  EDIT_ENGINE_INTEGRATION_COMPLETE_DIFF.md  EDIT_ENGINE_INTEGRATION_DIFF.md  FEATURE_VERIFICATION_REPORT.md  FIXES_APPLIED.md  INTEGRATION_GUIDE.md  LATEX_BUILDER_REFACTOR_DIFF.md  OPTIMIZATION_SUMMARY.md  ORCHESTRATION_PHASED_COMPLETE_DIFF.txt  ORCHESTRATION_PHASED_DIFF.md  README.md  REFACTORING_SUMMARY.md  TASKS_DIFF_SUMMARY.txt  TASKS_SHORTENING_DIFF.md  TEST_RESULTS_SUMMARY.md  TWO_PAGE_ENFORCEMENT_AUDIT.md  UI_CODE_REVIEW.md  activate.ps1  job_description.example.txt  job_description.json  job_description_sr_software_developer.json  orchestration_phased.py  profile.json  pyproject.toml  reference_path_check.txt  requirements.txt  selected_experiences.json  selected_projects.json  tasks_shortened.yaml  test_2_page_enforcement.py  test_compact_injection_direct.py  test_compact_layout_fix.py  test_compact_layout_simple.py  test_fixes.py  test_iterative_removal.py  test_large_resume_reduction.py  test_path_for_reference_tex.tex  (+3 more)
archive/: README.md  compile_tex.py  timings.py
docs/: ADVANCED.md  AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  CUSTOM_TEMPLATES.md  DATA_FLOW.md  DEPLOYMENT.md  DESIGN_ERROR_AGENT_INTEGRATION.md  DESIGN_ERROR_MEMORY.md  EDIT_ENGINE_LLM_ANALYSIS.md  ENVIRONMENT.md  FAST_MODE_OPTIMIZATIONS.md  GITHUB_SETUP.md  INSTALLATION.md  LATEX_BEST_PRACTICES.md  LATEX_SETUP.md  LLM_JSON_EDITOR_CLEANUP_SUMMARY.md  LLM_JSON_EDITOR_ENHANCEMENTS.md  QUICK_START.md  (+4 more)
(+92 files in other folders)
